# Space-Weather-Dashboard-Capstone

./: .dockerignore  .env.example  .gitignore  DYNAMIC_PLAYBACK_PLAN.md  README.md  aurora.json  benchmark_api.py  benchmark_compression.py  conftest.py  docker-compose.yaml  docker-compose.yml  drap.json  find_dead_containers.sh  geoelectric.json  migrate_to_timescale.sh  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: api-health.yml  ci.yml  deploy-api.yml  deploy-frontend.yml  deploy-prebuilt.yml  deploy-prefect.yml  deploy.yml  sync-flows.yml
docker/api/: Dockerfile  requirements.txt
docker/app/: Dockerfile
docker/database/: init.sql
docker/db-init-scripts/: init.sh  init.sql
docker/flows_package/: Dockerfile  requirements.txt
docker/nginx/: nginx.conf
frontend/: .env.development  .env.production  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  Charts.jsx  PlaneTracker.jsx  index.css  leaflet-heat-setup.js  main.jsx  planesData.json
prefect/: prefect.yaml  pyproject.toml
prefect/flows/: airports_extract.py  alert.py  d_rap_extract.py  db_maintain.py  drap_extract.py  (+3 more)
prefect_workflows/: README.md  prefect.yaml
secrets/: users.example.yml
shared/: alert_parser.py  compression.py  db_utils.py  logger.py  prefect_utils.py  redis.py
src/: __init__.py
tests/: test_coverage_enforcement.py  test_folder_structure.py
(+223 files in other folders)
