[project]
name = "202610-003-team-space-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "prefect>=3.6.22",
    "psycopg2-binary>=2.9.11",
    "pyopensky>=2.16",
    "pyquery>=2.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytz>=2025.2",
    "redis>=7.3.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
